--- a/indexdos.html
+++ b/indexdos.html
@@ -14,6 +14,7 @@
     <link rel="shortcut icon" href="IMG/m.png">
 </head>
 <body>
+  
     <header class="conteinter">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
@@ -87,6 +88,7 @@
           <br>
         </div>
         <h1>NUESTROS BESTSELLERS DEL MES</h1>  
+        <h2>Aplicando cambios para GIT</h2>
         <hr>
         <div class="container">
           <div class="row row-cols-3">
